# Autobuilder

./: .autobuild_current  .gitignore  AutobuildTerminal.spec  README.md  pyproject.toml
autoappbuilder/admin/static/js/: dashboard.js
autoappbuilder/admin/templates/: base.html  dashboard.html
autoappbuilder/api/: app.py
autoappbuilder/automation/notifications/: slack_webhook.json.j2
autoappbuilder/automation/repo/: github_release.yml.j2
autoappbuilder/automation/storage/: gcs_bucket.tf.j2
autoappbuilder/generator/: cli.py  renderer.py
autoappbuilder/templates/python_basic/: pyproject.toml.j2
autoappbuilder/utils/: store.py
mcp/: README_MCP.md  manifest.json
out_api/: pyproject.toml
out_cli2/: README.md  pyproject.toml
out_cli2/src/demo_cli/: __init__.py
scripts/: build-cli.sh  build-gui.sh  free-port-8080.sh
tests/: test_api.py  test_generator.py
tools/: autobuild_desktop.py  autobuild_desktop_qt.py  autobuild_desktop_qt.py.bak  autobuild_desktop_tk.py  autobuild_desktop_tk.py.bak3  autobuild_term.py  autobuild_textual.py  mcp_server.py  patcher.py
tools/config/: autobuild.yml
tools/scripts/: free-port-8080.sh
tools/tools/: autobuild_textual.py
